kubernetes/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timelog
  labels:
    app: timelog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timelog
  template:
    metadata:
      labels:
        app: timelog
    spec:
      containers:
        - name: timelog
          image: diegobbrito17/timelog:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    autoscaler:
      minReplicas: 1
      maxReplicas: 20
      metrics:
      - type: Resource
        resource:
          name: cpu
          targetAverageUtilization: 50
    schedule:
      - name: scale-up
        schedule: "0 9 * *"
        replicas: 10
      - name: scale-down
        schedule: "0 12 * *"
        replicas: 1
      - name: scale-up
        schedule: "0 14 * *"
        replicas: 10
      - name: scale-down
        schedule: "0 18 * *"
        replicas: 1
