kubernetes/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-timelog
  labels:
    app: timelog
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
  selector:
    app: timelog
